# arna-pick-place-safe-mcc

./: .gitignore  .gitmodules  README.md  Teleop_interface_instruction  requirements.txt
.catkin_tools/profiles/default/: devel_collisions.txt
src/pick_place/: CMakeLists.txt  Instruction  package.xml  pick_place.rviz
src/pick_place/cfg/: MpcCbfArm.cfg  OperatorIntent.cfg
src/pick_place/config/: mpc_cbf_params.yaml  operator_intent_params.yaml
src/pick_place/launch/: kinova_vision_rgbd.launch  kortex_driver.launch  pick_place.launch  start.sh
src/pick_place/msg/: NetworkQuality.msg
src/pick_place/scripts/: TODO.md  arm_cmd.py  arm_cmd_passthrough_node.py  camera.py  depth_processing.py  export_fastsam_to_onnx.py  grasp_net.py  main.py  mpc_cbf_arm_node.py  network_monitor_node.py  network_probe_relay.py  network_watchdog_node.py  operator_intent_node.py  proto_pub.py  segmentation.py  transform.py
